[package]
name = "chrono_key"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.9.9"
byteorder = "1.5.0"
clap = "4.4.6"
[dev-dependencies]
solana-program = "1.9.9"
solana-sdk = "1.9.9"
borsh = "1.1.0"

[lib]
crate-type = ["cdylib", "lib"]
path = "rust/lib.rs"